--- a/popup.html
+++ b/popup.html
@@ -30,38 +30,29 @@
 
         <div class="main-content" id="mainContent">
             <div class="stats-section">
-                <div class="stat-card">
+                <div class="stat-card single">
                     <span class="stat-number" id="emailCount">-</span>
                     <span class="stat-label">Emails Today</span>
                 </div>
-                <div class="stat-card">
-                    <span class="stat-number" id="unreadCount">-</span>
-                    <span class="stat-label">Unread</span>
-                </div>
             </div>
 
-            <div class="controls">
-                <button id="refreshBtn" class="btn-primary">
-                    <span id="refreshIcon">🔄</span> Refresh Summary
-                </button>
+            <div class="info-section">
+                <div class="info-card">
+                    <div class="info-icon">✨</div>
+                    <h3>AI Assistant Active</h3>
+                    <p>Open any email to see AI-powered summaries and reply suggestions</p>
+                </div>
             </div>
 
             <div class="loading" id="loading" style="display: none;">
                 <div class="spinner"></div>
-                <p>Generating AI summaries...</p>
-            </div>
-
-            <div class="summaries-section" id="summariesSection">
-                <h3>Today's Email Summary</h3>
-                <div id="summariesList" class="summaries-list">
-                    <!-- Email summaries will be populated here -->
-                </div>
+                <p>Counting today's emails...</p>
             </div>
 
             <div class="empty-state" id="emptyState" style="display: none;">
                 <div class="empty-icon">📭</div>
                 <h3>No emails today</h3>
-                <p>You haven't received any new emails today yet. Check back later!</p>
+                <p>You haven't received any new emails today yet.</p>
             </div>
 
             <div class="error-state" id="errorState" style="display: none;">
